--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 qlcplus (4.11.1) stable; urgency=low
 
+  * UI/Input Output Manager: added a button to enable/disable USB hotplugging (disabled by default)
   * Virtual Console/Slider: fix DMX values not updated when interacting with the mouse wheel, keyboard or Click And Go button
   * Web access: added basic authentication support (thanks to Bartosz Grabias)
 
