UI/Function Live Edit: restore basic live editing of Sequences

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ qlcplus (4.11.1) stable; urgency=low
 
   * UI/RGB Panel: added RBG pixel type (thanks to Peter Marks)
   * UI/Input Output Manager: added a button to enable/disable USB hotplugging (disabled by default)
+  * UI/Function Live Edit: restore basic live editing of Sequences
   * Virtual Console/Slider: fix DMX values not updated when interacting with the mouse wheel, keyboard or Click And Go button
   * Web access: added basic authentication support (thanks to Bartosz Grabias)
 
