--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ qlcplus (4.11.1) stable; urgency=low
   * UI/Function Live Edit: restore basic live editing of Sequences
   * Virtual Console/Slider: fix DMX values not updated when interacting with the mouse wheel, keyboard or Click And Go button
   * Web access: added basic authentication support (thanks to Bartosz Grabias)
+  * Web access: fixed solo frames collapse state
   * New fixtures: IMG Stageline BEAM-40 WS/RGBW, Fun-Generation LED Diamond Dome (thanks to Tolmino Muccitelli)
   * New fixture: Elation Cuepix Batten (thanks to Saul Vielmetti)
   * New fixture: Clay Paky Tiger Scan HMI 575/1200 (thanks to Daris Tomasoni)
