--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ qlcplus (4.11.1) stable; urgency=low
 
   * engine: fixed audio files detection by prioritizing sndfile over mad
   * engine: fixed HTP/LTP forced channels not set correctly
+  * engine: keep track of input/output device lines even if they are disconnected
   * UI/RGB Panel: added RBG pixel type (thanks to Peter Marks)
   * UI/Remap: fixed RGB Panels remapping
   * UI/Input Output Manager: added a button to enable/disable USB hotplugging (disabled by default)
