--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ qlcplus (4.11.1) stable; urgency=low
   * engine: fixed audio files detection by prioritizing sndfile over mad
   * engine: fixed HTP/LTP forced channels not set correctly
   * engine: keep track of input/output device lines even if they are disconnected
+  * Scripts: add blackout:on and blackout:off commands
   * UI: it is now possible to detach a QLC+ context tab on a separate window by double clicking on it
   * UI/RGB Panel: added RBG pixel type (thanks to Peter Marks)
   * UI/Remap: fixed RGB Panels remapping
