resources: added "Noise" RGB script

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,7 +14,7 @@ qlcplus (4.11.1) stable; urgency=low
   * Virtual Console/Slider: fix DMX values not updated when interacting with the mouse wheel, keyboard or Click And Go button
   * Virtual Console/Slider: fix level mode values range scaling
   * Virtual Console/XYPad: the speed of a running EFX preset can now be controlled by a Speed Dial widget
-  * RGB Scripts: added "Random pixel per row" and "Random pixel per row multicolor" (thanks to Doug Puckett)
+  * RGB Scripts: added "Noise", "Random pixel per row" and "Random pixel per row multicolor" (thanks to Doug Puckett)
   * Web access: added basic authentication support (thanks to Bartosz Grabias)
   * Web access: fixed solo frames collapse state
   * Web access: update feedbacks when a slider is moved
