resources: 7 new fixtures (see changelog)

--- a/debian/changelog
+++ b/debian/changelog
@@ -33,6 +33,9 @@ qlcplus (4.11.1) stable; urgency=low
   * New fixture: Cameo Flash Bar 150 (thanks to Kevin Wimmer)
   * New fixtures: Chauvet FXpar 9, IMG Stageline Wash-40 LED (thanks to PeterK)
   * New fixture: JB Systems iRock 5C (thanks to Andres Robles)
+  * New fixtures: beamZ BAC406, Geni Mojo Color Moc (thanks to Mark Sy)
+  * New fixtures: Stairville MH-250 S, Chauvet GigBAR 2, Pro-Lights Onyx (thanks to Freasy)
+  * New fixtures: Coemar ProSpot 250 LX, Showtec Kanjo Spot 60 (thanks to Flo Edelmann)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 27 Aug 2017 12:13:14 +0200
 
