--- a/debian/changelog
+++ b/debian/changelog
@@ -3,7 +3,7 @@ qlcplus (4.11.1) stable; urgency=low
   * engine: fixed audio files detection by prioritizing sndfile over mad
   * engine: fixed HTP/LTP forced channels not set correctly
   * engine: keep track of input/output device lines even if they are disconnected
-  * engine/Script: add blackout:on and blackout:off commands
+  * engine/Script: add blackout:on and blackout:off commands (Jano Svitok)
   * engine/Script: do not keep empty trailing lines when saving a workspace
   * UI: it is now possible to detach a QLC+ context tab on a separate window by double clicking on it
   * UI/RGB Panel: added RBG pixel type (thanks to Peter Marks)
@@ -38,7 +38,7 @@ qlcplus (4.11.1) stable; urgency=low
   * New fixtures: Stairville MH-250 S, Chauvet GigBAR 2, Pro-Lights Onyx (thanks to Freasy)
   * New fixtures: Coemar ProSpot 250 LX, Showtec Kanjo Spot 60 (thanks to Flo Edelmann)
 
- -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 27 Aug 2017 12:13:14 +0200
+ -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 29 Oct 2017 12:13:14 +0200
 
 qlcplus (4.11.0) stable; urgency=low
 
