--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qlcplus (4.11.2) stable; urgency=low
+
+ -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 25 Mar 2018 12:13:14 +0200
+
 qlcplus (4.11.1) stable; urgency=low
 
   * engine: fixed audio files detection by prioritizing sndfile over mad
