engine: fix crash caused by NULL plugin
Most likely this is a regression caused by 7ad078d13ce48367d6b263f85e1783bfc6fd31af

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 qlcplus (4.11.2) stable; urgency=low
 
+  * engine: fix crash caused by an invalid IO mapping
   * UI/Function Manager: fixed keyboard shortcut conflicts and document them
   * UI/Function Manager: allow to import multiple of audio/video files at once
   * UI/Chaser Editor: add a button to shuffle the selected Chaser steps (thanks to Felix Edelmann)
