engine: fix attributes override not considered during fade out
Releasing an attribute right after a stop() call is too early, since stop()
is deferred and actually executed by MasterTimer at the next tick.
This caused intensity override to be reset too early and being not available
in Function::postRun, therefore not considered during fade outs.
In other words, calling releaseAttributeOverride after a stop doesn't make sense,
since Function::postRun will call resetAttributes anyway, at the right time.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 qlcplus (4.11.2) stable; urgency=low
 
   * engine: fix crash caused by an invalid IO mapping
+  * engine: fix intensity override not considered during fade outs
   * UI/Function Manager: fixed keyboard shortcut conflicts and document them
   * UI/Function Manager: allow to import multiple of audio/video files at once
   * UI/Chaser Editor: add a button to shuffle the selected Chaser steps (thanks to Felix Edelmann)
