resources: 14 new fixtures (see changelog)

--- a/debian/changelog
+++ b/debian/changelog
@@ -41,6 +41,11 @@ qlcplus (4.11.2) stable; urgency=low
   * New fixture: lightmaXX Platinum Line Flat Par COB (thanks to Leonardo)
   * New fixture: Stairville LED Blinder 2 COB 2x65W (thanks to chritoep)
   * New fixture: lightmaXX LED PAR 64 (thanks to Johannes Felber)
+  * New fixture: Cameo Thunder Wash Series (thanks to JP)
+  * New fixture: Briteq BT 575S (thanks to Andres Robles)
+  * New fixture: beamZ LED FlatPAR-154 (thanks to Jászberényi Szabolcs)
+  * New fixtures: Eurolite THA-100F COB, Cameo Tribar 200 IR (thanks to David Morgenschweis)
+  * New fixture: beamZ BT310 LED FlatPAR 12x8W 4-1 DMX IR (thanks to Mark)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 15 Apr 2018 12:13:14 +0200
 
