--- a/debian/changelog
+++ b/debian/changelog
@@ -10,7 +10,7 @@ qlcplus (4.11.2) stable; urgency=low
   * Show Manager: fix crash when adding a Sequence after deleting one
   * Show Manager: fix items start time indication when dragging
   * Virtual Console/Slider: fix submaster initial value not applied and inverted mode
-  * Virtual Console/Slider: implemented 'value catching' for controllers without feedbacks (Lukas Jähn proposal)
+  * Virtual Console/Slider: added 'value catching' option for external controller faders (Lukas Jähn proposal)
   * Virtual Console/Slider: fix values range when switching between Slider and Knob appearance
   * Virtual Console/Slider: react on Scene flashing when in playback mode
   * Virtual Console/Knob: fix DMX values not updated when interacting with the mouse wheel
