ShowManager: fix crash when editing a Sequence bound to a deleted Scene

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ qlcplus (4.11.2) stable; urgency=low
   * UI/Chaser Editor: add a button to shuffle the selected Chaser steps (thanks to Felix Edelmann)
   * UI/RGBMatrix Editor: fix preview not updating on pattern change when play button is on
   * Show Manager: fix crash when adding a Sequence after deleting one
+  * Show Manager: fix crash when editing a Sequence bound to a deleted Scene
   * Show Manager: fix items start time indication when dragging
   * Virtual Console/Slider: fix submaster initial value not applied and inverted mode
   * Virtual Console/Slider: added 'value catching' option for external controller faders (Lukas Jähn proposal)
