--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qlcplus (4.11.3) stable; urgency=low
+
+ -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 21 Oct 2018 12:13:14 +0200
+
 qlcplus (4.11.2) stable; urgency=low
 
   * engine: fix crash caused by an invalid IO mapping
