--- a/debian/changelog
+++ b/debian/changelog
@@ -9,7 +9,12 @@ qlcplus (4.11.3) stable; urgency=low
   * New fixture: Orion Effects Lighting ORCAN2 (thanks to Felix Edelmann)
   * New fixtures: American DJ Revo Burst, Ayra TDC Triple Burst, Chauvet GigBAR 2 (thanks to Flo Edelmann)
   * New fixture: Venue TriStrip3Z (thanks to Flo Edelmann)
-  * New fixture: Stairville Crown FX PAR77 (thanks to Andres Robles)
+  * New fixture: Stairville Crown FX PAR77, JB Systems LED DJ-BAR (thanks to Andres Robles)
+  * New fixtures: Cameo CLPIXBAR200PRO, CLPIXBAR300PRO, CLPIXBAR400PRO (thanks to Stelian Cunitchi)
+  * New fixtures: AVE Quad Pro Flat, Cobra Wash 200, StagePar Hex18 (thanks to Mark Sy)
+  * New fixture: Stairville LED PAR64, Clay Paky Mini Scan 150, Clay Paky Mini Scan 300 (thanks to Jászberényi Szabolcs)
+  * New fixture: Cameo CLPFLATPRO Series (thanks to Antonio Nó Rodríguez)
+  * New fixtures: Robe Robin Viva CMY, Robin 800 LEDWash (thanks to Jasper Zevering)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 21 Oct 2018 12:13:14 +0200
 
