resources: 3 new fixtures (see changelog)
And more gobos

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,7 +26,9 @@ qlcplus (4.12.0) stable; urgency=low
   * New fixtures: Showtec Phantom 130 LED Spot, Eurolite TMH-30/60 (thanks to Piotr Nowik)
   * New fixture: Varytec BAT.PAR 6 RGBWA (thanks to Edgar Aichinger)
   * New fixture: IMG Stageline PARL-40SET (thanks to Mitsch)
-  * New fixtures: Equinox Quad Pix Batten, Chauvet Wash FX2 (thanks to Justin Hornsby)
+  * New fixtures: Equinox Quad Pix Batten, Chauvet Wash FX2, MARQ Gesture Spot 300 (thanks to Justin Hornsby)
+  * New fixture: JB Systems Space Laser 3 (thanks to Ben Engelen)
+  * New fixture: Cameo NanoBeam 300 (thanks to Martin)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 21 Oct 2018 12:13:14 +0200
 
