--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,16 @@
 qlcplus (4.12.0) stable; urgency=low
 
+  * engine: reworked to achieve multithreaded universes and properly handle fade transitions
   * engine/RGBMatrix: added support for animated GIF pictures
   * UI/Scene Editor: fixed crash when removing a Fixture and Scene Editor is open
   * UI/Chaser Editor: fix Sequence step value unset
   * UI/Show Manager: properly reset editors and selection when switching context
   * UI/Show Manager: avoid Scene values to be overwritten on Sequences sharing the same bound Scene
+  * UI/Show Manager: improved audio waveform preview
   * Plugins/DMX USB: reworked to have asynchronous transmission and frequency setting from UI
   * Plugins/OSC: added support for double values (in 0.0 - 1.0 range)
   * Fixture Editor: reworked to define more accurate information (see documentation)
+  * Fixture Editor: fixed D4 definitions import
   * New input profile: Akai APC40 mkII (thanks to Ovidijus Cepukas)
   * New input profiles: Novation Launchpad MK2, Behringer X-Touch Extender (thanks to Tim Cullingworth)
   * New fixture: American DJ Entour Venue
