resources: 8 new fixtures (see changelog)

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,7 +23,8 @@ qlcplus (4.12.0) stable; urgency=low
   * New fixtures: Cameo CLPIXBAR200PRO, CLPIXBAR300PRO, CLPIXBAR400PRO (thanks to Stelian Cunitchi)
   * New fixtures: AVE Quad Pro Flat, Cobra Wash 200, StagePar Hex18 (thanks to Mark Sy)
   * New fixtures: Stairville LED PAR64, Clay Paky Mini Scan 150, Clay Paky Mini Scan 300 (thanks to Jászberényi Szabolcs)
-  * New fixtures: Ayra WSM02/WSM03 MKII, Involight FM1500 DMX, FM3000 PRO, FM1200 UP (thanks to Jászberényi Szabolcs)
+  * New fixtures: Ayra WSM02/WSM03 MKII, Laserworld PRO-1600RGB (thanks to Jászberényi Szabolcs)
+  * New fixtures: Involight FM1500 DMX, FM3000 PRO, FM1200 UP, SlimPar56 PRO (thanks to Jászberényi Szabolcs)
   * New fixture: Cameo CLPFLATPRO Series (thanks to Antonio Nó Rodríguez)
   * New fixtures: Robe Robin Viva CMY, Robin 800 LEDWash (thanks to Jasper Zevering)
   * New fixture: Chauvet COLORdash Par-Hex 7 (thanks to Jean-Daniel Garcia)
@@ -31,7 +32,7 @@ qlcplus (4.12.0) stable; urgency=low
   * New fixture: Stairville WGF 2000 (thanks to CoS2000)
   * New fixture: Dia Lighting Diapro Spot LED 300 (thanks to DJ Ladonin)
   * New fixtures: Showtec Phantom 130 LED Spot, Eurolite TMH-30/60, Showtec Vintage Blaze (thanks to Piotr Nowik)
-  * New fixture: Varytec BAT.PAR 6 RGBWA (thanks to Edgar Aichinger)
+  * New fixtures: Varytec BAT.PAR 6 RGBWA, American DJ WiFly PAR QA5 (thanks to Edgar Aichinger)
   * New fixture: IMG Stageline PARL-40SET (thanks to Mitsch)
   * New fixtures: Equinox Quad Pix Batten, Chauvet Wash FX2, MARQ Gesture Spot 300, American DJ Warlock (thanks to Justin Hornsby)
   * New fixture: JB Systems Space Laser 3 (thanks to Ben Engelen)
@@ -41,10 +42,14 @@ qlcplus (4.12.0) stable; urgency=low
   * New fixtures: Elation DW Fresnel, Robe ColorWash 250 AT (thanks to Niklas Larsson)
   * New fixture: Varytec Street Bar (thanks to Daniel Fairhead)
   * New fixture: American DJ Accu Roller 250 (thanks to Anders Thomsen)
-  * New fixture: BoomToneDJ SilentPAR 12x10w 6in1 (thanks to John Yiannikakis)
+  * New fixtures: BoomToneDJ SilentPAR 12x10w 6in1, Involight COBBAR815 (thanks to John Yiannikakis)
   * New fixture: Chauvet COLORado Batten 72 Tour (thanks to James Wilson)
   * New fixture: Antari F-5D Fazer (thanks to Mark Lohrey)
   * New fixture: Showtec Spectral ZP-5 (thanks to JP)
+  * New fixture: Stairville Pixel Panel 144 RGB (thanks to Michael Clements)
+  * New fixture: Cameo Hydrabeam 1000 RGBW (thanks to AxelOtl)
+  * New fixture: American DJ QA5 IP (thanks to Georg Müller)
+  * New fixture: DTS XR5 Wash (thanks to Johannes Felber)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 21 Oct 2018 12:13:14 +0200
 
