--- a/debian/changelog
+++ b/debian/changelog
@@ -49,7 +49,17 @@ qlcplus (4.12.0) stable; urgency=low
   * New fixture: Stairville Pixel Panel 144 RGB (thanks to Michael Clements)
   * New fixture: Cameo Hydrabeam 1000 RGBW (thanks to AxelOtl)
   * New fixture: American DJ QA5 IP (thanks to Georg Müller)
-  * New fixture: DTS XR5 Wash (thanks to Johannes Felber)
+  * New fixtures: DTS XR5 Wash, Stairville Wild Wash 9x3W LED UV (thanks to Johannes Felber)
+  * New fixture: Martin Thrill Mini Profile (thanks to John R Houston)
+  * New fixture: Showtec Indigo 4500 (thanks to pixeldoc81)
+  * New fixture: PR Lighting JNR Flat PAR 8160C (thanks to Giacomo Gorini)
+  * New fixture: GLP YPOC 575 PRO (thanks to Felix Pickenäcker)
+  * New fixtures: beamZ MHL108 Wash MKII, UKing Mini RGBW Moving Head (thanks to Mike S)
+  * New fixture: ETC Desire D22 Lustr+ (thanks to Tavon Markov)
+  * New fixture: Chauvet Swarm 4 FX (thanks to David Gianforte)
+  * New fixtures: Stairville Mini Stage Par RGBW, LED Par 36 COB RGBW, LED PAR64 MKII RGBW (thanks to Jose Coelho)
+  * New fixtures: Eurolite LED T-36 RGB Pinspot, beamZ BT270 LED FlatPAR (thanks to Herbie)
+  * New fixture: Proel PLLEDSP (thanks to Martino)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 21 Oct 2018 12:13:14 +0200
 
